                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2013-06-18
 * Wing::Rest::Status now returns a tracer for checking cookie values.

2013-06-08
 * Better support for sites, user-controlled deletion, restoration and list all/owned.

2013-06-08
 * Site's trashed property is now available to admins.

2013-06-06
 * Many bug-fixes with tenant handling in wing db

2013-05-31
 * Added tenant() and tenant_db() methods to Wing.pm.

2013-05-30
 * Added the --do option to wing db.
 * Added the wing tenant plugin

2013-05-25
 * Added Wing Command, the new CLI for Wing.
 * Now requires App::Cmd.
 * Converted wing_db.pl to Wing Command.
 * Converted wing_add_user.pl to Wing Command.
 * wing user can now search and list users, and list only admins.
 * Add wing do to Wing Command, for firing off Wingman jobs.
 * Converted wing_add_class.pl and wing_template_class.pl to Wing Command.

2013-05-19
 * Added EmailAllAdmins Wingman plugin.
 * WARNING: By this point all Wing apps should have a block similar 
	to this added to their config files if they want to start
	using Wingman services.

    "wingman" : {
        "max_workers" : 2,
        "beanstalkd" : {
           "server" : "127.0.0.1",
           "ttr" : 60,
           "default_tube" : "wingman",
        },
        "plugins" : {
           "Wingman::Plugin::SendTemplatedEmail" : {
                "phase" : "SendTemplatedEmail",
           },
           "Wingman::Plugin::EmailAllAdmins" : {
                "phase" : "EmailAllAdmins",
           },
        }
    },

2013-05-18
 * Added SendTemplatedEmail Wingman plugin.
 * Added generic.mkit
 * Added reset_password.mkit

2013-05-16
 * Added Wingman manager rest and web interfaces.

2013-05-14
 * Restructured Wingman and added more documentation for it.
