@@ -121,6 +121,24 @@ register generate_crud => sub {
     generate_create($wing_object_type);
 };
 
+register generate_relationship => sub {
+    my ($wing_object_type, $relationship_name, %options) = @_;
+    my $object_url = lc($wing_object_type);
+    get '/api/'.$object_url.'/:id/'.$relationship_name => sub {
+        my $current_user = eval{get_user_by_session_id(permissions => $options{permissions})};
+        my $object = fetch_object($wing_object_type);
+        my $data = $object->$relationship_name();
+        return format_list($data, current_user => $current_user); 
+    };
+};
+
+register generate_all_relationships => sub {
+    my ($wing_object_type, %options) = @_;
+    foreach my $name (site_db()->resultset($wing_object_type)->result_source->relationships) {
+        generate_relationship($wing_object_type, $name, %options);
+    }
+};
+
 hook after => sub {
     my $response = shift;
     $response->content(to_json({ result => from_json($response->content) }));
@@ -175,6 +193,7 @@ Wing::Rest - Dancer plugin to generate Rest from Wing classes.
  use Wing::Rest;
  
  generate_crud('User');
+ generate_all_relationships('User');
  
  1;
  
@@ -250,6 +269,19 @@ Does C<generate_create>, C<generate_read>, C<generate_update>, C<generate_delete
 
  generate_crud('User');
 
+=head2 generate_relationship ( object_type, relationship_name, options )
+
+ generate_relationship('User','apikeys'); # GET /api/user/xxx/apikeys
+
+=head2 generate_all_relationships ( object_type, options )
+
+ generate_all_relationships('User'); # GET /api/user/xxx/yyy
+ 
+where C<yyy> is any relationship defined using L<Wing::Role::Result::Parent> or L<Wing::Role::Result::Child>.
+
 =head1 SEE ALSO
 
 The subroutines from L<Wing::Dancer> are also imported into here. You should also look at L<Wing::RestUsage> for the output that will be generated by these methods. 
+
+=cut
+
